force-app/main/default/objects/User/fields/Interview_Dept__c.field-meta.xml
<CustomField>
    <fullName>Interview_Dept__c</fullName>
    <inlineHelpText>This is the department this person usually performs interviews for, though they can still be added as interviewers on positions for other departments</inlineHelpText>
    <label>Interview Dept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>