force-app/main/default/objects/User/fields/Legacy_Employee_Num__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Employee_Num__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Employee Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>