force-app/main/default/objects/User/fields/People_Manager__c.field-meta.xml
<CustomField>
    <fullName>People_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>People Manager?</label>
    <type>Checkbox</type>
</CustomField>